--- a/index.html
+++ b/index.html
@@ -59,13 +59,12 @@
         <div class="grid-cols-2">
           <div class="grid-item-1">
             <h1 class="main-heading">
-              Welcome to <span>Devkit.</span>
+              Welcome to <span>Christian Moreno Martínez</span>
               <br />
-              Develop anything.
+              Jodiendole la vida al teacher desde la beta.
             </h1>
             <p class="info-text">
-              Build a beautiful, modern website with flexible components built
-              from scratch.
+              Mi página.
             </p>
 
             <div class="btn_wrapper">
