--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <div class="grid-cols-2">
           <div class="grid-item-1">
             <h1 class="main-heading">
-              Welcome to <span>Christian Moreno Martínez</span>
+              Welcome to <span>No se que hacer</span>
               <br />
-              Jodiendole la vida al teacher desde la beta.
+              Teacher aiuda.
             </h1>
             <p class="info-text">
               Mi página.
@@ -72,7 +72,7 @@
                 view all pages <i class="ri-arrow-right-line"></i>
               </button>
 
-              <button class="btn documentation_btn">Rama Pruebas</button>
+              <button class="btn documentation_btn">Rama Testing</button>
             </div>
           </div>
           <div class="grid-item-2">
